...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flashcard_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/card_background">

    </androidx.recyclerview.widget.RecyclerView>
...
