...
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/edit_flashcard_button"
            android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
