<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EDEDED">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:hint="Subject"
            android:textColorHint="#787878"
            android:background="@android:color/transparent"/>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:id="@+id/editTextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:hint="Question"
            android:textColorHint="#787878"
            android:background="@android:color/transparent"/>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:id="@+id/editTextAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:hint="Answer"
            android:textColorHint="#787878"
            android:background="@android:color/transparent"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>
